tests/src/frontend/visibility/invalid/private_abstract_1.sk
base class Foo {
  private fun bar(): void;
}
